--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,8 @@
 # compiled output
-*/dist
-*/node_modules
-api-manager/node_modules
-api-manager/dist
-edge/dist
-
+/dist
+/node_modules
+/package-lock.json
+/yarn.lock
 
 
 # Logs
@@ -22,18 +20,7 @@ lerna-debug.log*
 /coverage
 /.nyc_output
 
-# IDEs and editors
-/.idea
-.project
-.classpath
-.c9/
-*.launch
-.settings/
-*.sublime-workspace
 
-# IDE - VSCode
-.vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
+# IDEs
+.vscode
+.idea
