--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
       dockerfile: Dockerfile
     ports:
     - "3000:3000"
+    environment:
+      - API_MANAGER_HOST=api-manager
 
   api-manager:
     build:
