--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "docker:run": "docker-compose --file docker-compose.yml up",
+    "docker:up": "docker-compose --file docker-compose.yml up",
     "docker:build": "docker-compose --file docker-compose.yml up --build"
   },
   "keywords": [],
