--- a/edge/Dockerfile
+++ b/edge/Dockerfile
@@ -1,21 +1,16 @@
-FROM node:12.16.1-alpine3.9 as builder
+FROM node:12.16.1-alpine
 
 WORKDIR /edge
-COPY ./ /edge
 
-RUN apk update && \
-    apk upgrade && \
-    apk add --no-cache bash git openssh && \
-    yarn install
+COPY . .
 
-FROM node:12.16.1-alpine3.9
-COPY --from=builder /edge /
+RUN yarn install
+RUN yarn build
 
 EXPOSE 3000
 
-## Add the wait script to the image
+# Wait script to the image
 ADD https://github.com/ufoscout/docker-compose-wait/releases/download/2.7.3/wait /wait
 RUN chmod +x /wait
 
-CMD /wait
-CMD ["yarn", "start:dev"]
+CMD /wait && yarn start:dev
